@@ -647,7 +647,7 @@ AT_CHECK([$COMPILE_ONLY prog.cob], [0], [], [])
 
 AT_DATA([prog2.cob], [
        IDENTIFICATION DIVISION.
-       PROGRAM-ID. prog.
+       PROGRAM-ID. prog2.
 
        DATA DIVISION.
        WORKING-STORAGE SECTION.
@@ -3821,7 +3821,7 @@ AT_KEYWORDS([misc extensions])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION DIVISION.
-       PROGRAM-ID.    prog1.
+       PROGRAM-ID.    prog.
 
        ENVIRONMENT    DIVISION.
        CONFIGURATION  SECTION.
@@ -3830,7 +3830,7 @@ AT_DATA([prog.cob], [
        OBJECT-COMPUTER. a.
        SPECIAL-NAMES.
 
-       END PROGRAM prog1.
+       END PROGRAM prog.
 
        IDENTIFICATION DIVISION.
        PROGRAM-ID.    prog2.
